[gd_scene load_steps=4 format=3 uid="uid://dhsbthvw13blj"]

[ext_resource type="FontFile" uid="uid://bdled44q30bpf" path="res://fonts/DePixelHalbfett.otf" id="2_7ldnj"]
[ext_resource type="Script" path="res://scripts/MainMenuOpt.gd" id="2_67no2"]
[ext_resource type="Texture2D" uid="uid://pyeugeuasamn" path="res://assets/Background/background_moon.png" id="3_whnic"]

[node name="Menu" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(4, 4)
texture = ExtResource("3_whnic")

[node name="MainMenuOpt" type="VBoxContainer" parent="."]
offset_left = 830.0
offset_top = 445.0
offset_right = 1086.0
offset_bottom = 706.0
script = ExtResource("2_67no2")
metadata/_edit_group_ = true

[node name="Resume" type="Button" parent="MainMenuOpt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7ldnj")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="NewGame" type="Button" parent="MainMenuOpt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7ldnj")
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="Settings" type="Button" parent="MainMenuOpt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7ldnj")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Credits" type="Button" parent="MainMenuOpt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7ldnj")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="Quit" type="Button" parent="MainMenuOpt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7ldnj")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="MainMenuOpt/Resume" to="MainMenuOpt" method="_on_resume_pressed"]
[connection signal="pressed" from="MainMenuOpt/NewGame" to="MainMenuOpt" method="_on_button_pressed"]
[connection signal="pressed" from="MainMenuOpt/Settings" to="MainMenuOpt" method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenuOpt/Credits" to="MainMenuOpt" method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenuOpt/Quit" to="MainMenuOpt" method="_on_quit_pressed"]
